# porkbun-ddns

./: .gitignore  Cargo.toml  README.md  porkbun-ddns.service  porkbun-ddns.timer  rustfmt.toml
src/: api.rs  config.rs  logging.rs  main.rs
src/api/: client.rs  mod.rs  model.rs
